# Encryptify

./: .gitignore  CMakeLists.txt  README.md  sample2.txt  vault_index.json
src/: cli.cpp  cli.h  encryption.cpp  encryption.h  file_ops.cpp  file_ops.h  huffman.cpp  huffman.h  main.cpp
src/app/encryptDecrypt/: Cryption.cpp
